# azure-ai-200-certification-challenge

./: .gitignore  CLAUDE.md  HISTORY.md  PREREQUISITES.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: azure-architect.md  docs-writer.md  observability-expert.md  phase-learning-fetcher.md  rag-engineer.md
.claude/docs-writer/: style-guide.md
.claude/hooks/: bicep-build.sh  block-az-delete.sh  python-lint.sh
.claude/skills/commit/: SKILL.md
.claude/skills/phase-cleanup/: SKILL.md
.claude/skills/phase-start/: SKILL.md
.claude/skills/phase-verify/: SKILL.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/: main.py  settings.py
apps/api/src/cache/: __init__.py  redis_client.py  semantic.py
apps/api/src/clients/: aoai.py  aoai_client.py
apps/api/src/config/: loader.py
apps/api/src/messaging/: pubsub.py  streams.py
apps/api/src/observability/: spans.py
apps/api/src/rag/: chain.py
apps/api/src/routers/: chat.py  health.py  index_search.py
apps/api/src/stores/: base.py  cosmos_store.py  pg_bootstrap.sql  pg_store.py
apps/functions/: .funcignore  README.md  function_app.py  pyproject.toml  requirements.txt
apps/functions/clients/: aoai_embed.py  eventgrid_publisher.py  pg_writer.py  redis_invalidator.py  servicebus_sender.py
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/chat/: route.ts
apps/worker/: README.md
docs/: README.md  _style.md  architecture.md  cleanup.md  history.md  roadmap.md
docs/decisions/: 0001-tech-stack-and-scope.md
docs/learning-paths/: 01-container-hosting.md  02-container-apps.md  03-aks.md  04-cosmos-db.md  05-postgresql.md  06-managed-redis.md  07-backend-services.md  08-secrets-config.md  09-observability.md  10-iac-migration.md
docs/learning-paths/screenshots/: README.md
docs/pitfalls/: common.md
docs/sessions/: 00-setup.md  01-rag-mvp.md  02-pgvector.md  03-redis-cache.md  04-async-ingestion.md  05-app-config-flags.md  06-observability.md  07-aks.md  _template.md
infra/: README.md
infra/modules/: README.md  acr.bicep  aks-cluster.bicep  aks-container-insights.bicep  aoai-account.bicep  aoai-deployment.bicep  app-service-container.bicep  app-service-plan.bicep  application-insights.bicep  container-app.bicep  container-apps-env.bicep  cosmos-account.bicep  cosmos-sql-container.bicep  cosmos-sql-database.bicep  event-grid-topic.bicep  function-app-flex.bicep  function-app-plan-flex.bicep  log-analytics.bicep  postgres-aad-admin.bicep  postgres-database.bicep  postgres-firewall-rule.bicep  postgres-flexible-server.bicep  postgres-server-config.bicep  redis-access-policy-assignment.bicep  redis-enterprise-database.bicep  redis-enterprise.bicep  role-assignment-acrpull.bicep  role-assignment-aks-cluster-admin.bicep  role-assignment-aoai-user.bicep  role-assignment-cosmos-data-contributor.bicep  role-assignment-eventgrid-data-sender.bicep  role-assignment-mi-operator.bicep  role-assignment-servicebus-data-receiver.bicep  role-assignment-servicebus-data-sender.bicep  role-assignment-storage-blob-owner.bicep  service-bus-namespace.bicep  service-bus-queue.bicep  storage-for-functions.bicep  user-assigned-identity.bicep
infra/modules/session-00/: aoai-account.bicep  key-vault.bicep  log-analytics.bicep  resource-group.bicep  user-assigned-identity.bicep
infra/modules/session-01/: acr.bicep  container-app.bicep  cosmos-account.bicep
infra/modules/session-02/: postgres-database.bicep  postgres-server-config.bicep
infra/modules/session-03/: redis-enterprise.bicep
infra/modules/session-04/: event-grid-subscription.bicep  event-grid-system-topic.bicep  function-app-flex.bicep  role-assignment-storage.bicep  service-bus-namespace.bicep
infra/modules/session-05/: app-configuration-feature-flag.bicep  app-configuration.bicep
infra/modules/session-07/: aks-container-insights-dcr.bicep  federated-identity-credential.bicep  role-assignment-acrpull.bicep
infra/phases/01-container-hosting/: main.bicep  main.bicepparam
infra/phases/02-container-apps/: main.bicep  main.bicepparam
infra/phases/03-aks/: main.bicep  main.bicepparam
infra/phases/03-aks/k8s/: api-deployment.yaml
infra/phases/04-cosmos-aoai/: main.bicep  main.bicepparam
infra/phases/05-postgresql/: main.bicep  main.bicepparam
infra/phases/06-managed-redis/: main.bicep  main.bicepparam
infra/phases/07-backend-services/: main.bicep  main.bicepparam
infra/sessions/00-setup/: main.bicep  main.bicepparam
infra/sessions/01-rag-mvp/: README.md  main.bicep  main.bicepparam
infra/sessions/02-pgvector/: README.md
infra/sessions/03-redis-cache/: README.md
infra/sessions/04-async-ingestion/: README.md  main.bicep
infra/sessions/05-app-config-flags/: README.md
infra/sessions/06-observability/: README.md  main.bicep
infra/sessions/07-aks/: README.md  main.bicep
infra/sessions/07-aks/manifests/: configmap.yaml  deployment.yaml
save-points/: README.md
save-points/session-00/: README.md
save-points/session-01/: README.md
save-points/session-01/complete/apps/api/: pyproject.toml
save-points/session-01/complete/scripts/: seed_cosmos.py
save-points/session-01/start/apps/api/: Dockerfile  pyproject.toml
save-points/session-01/start/apps/api/src/: main.py  settings.py
save-points/session-01/start/apps/api/src/clients/: aoai.py
save-points/session-01/start/apps/api/src/rag/: chain.py
save-points/session-01/start/apps/api/src/stores/: cosmos_store.py
save-points/session-02/: README.md
save-points/session-02/complete/scripts/: seed_both.py
save-points/session-02/start/scripts/: seed_both.py
save-points/session-03/: README.md
save-points/session-04/: README.md
save-points/session-05/: README.md
save-points/session-05/start/scripts/: send_chat_traffic.py
save-points/session-06/: README.md
save-points/session-07/: README.md
scripts/: README.md  check_redis.py  seed_app_config.py
(+129 files in other folders)
