[project]
name = "ai200challenge-api"
version = "0.1.0"
description = "Azure AI-200 Challenge — FastAPI backend for enterprise RAG assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "azure-cosmos>=4.7.0",
    "azure-identity>=1.19.0",
    "aiohttp>=3.10.0",
    "openai>=1.55.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
