[project]
name = "ai200-workshop-api"
version = "0.1.0"
description = "Azure AI-200 Workshop — FastAPI 백엔드 (RAG 파이프라인)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Azure authentication
    "azure-identity>=1.19.0",
    # azure-core 의 async HTTP transport. ACA 에서 async DefaultAzureCredential
    # (AppServiceCredential) 이 필요로 하지만 최신 azure-core 는 자동 설치하지 않으므로
    # 명시적으로 선언한다. 누락 시 startup 에서 ModuleNotFoundError: aiohttp 로 크래시.
    "aiohttp>=3.10.0",

    # Azure OpenAI
    "openai>=1.54.0",

    # Cosmos DB
    "azure-cosmos>=4.7.0",

    # PostgreSQL pgvector (session-02)
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.6",

    # Managed Redis 시맨틱 캐시 (session-03)
    "redis>=5.0.0",
    "redis-entraid>=1.0.0",

    # App Configuration 피처 플래그 (session-05)
    "azure-appconfiguration-provider>=2.0.0",
    "featuremanagement>=2.0.0",

    # Observability — Azure Monitor + OpenTelemetry 자동 계측 묶음
    "azure-monitor-opentelemetry>=1.6.0",
    # FastAPI 인입 요청 계측 — distro 에 포함되나, app 인스턴스를 명시 계측(instrument_app)
    # 하려면 직접 import 하므로 명시 의존성으로 선언한다.
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    # azure-monitor 가 자동 활성화하지 않는 async HTTP 클라이언트 계측 — Azure OpenAI(httpx),
    # Cosmos(aiohttp) 호출을 dependency span 으로 남기려면 명시적으로 추가해야 한다.
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-aiohttp-client",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# 기본 + import 정렬 + 단순 버그 패턴
select = ["E", "F", "I", "B", "UP"]
ignore = [
    # 일부 한국어 docstring 의 라인 길이는 학습 가독성을 위해 길게 유지
    "E501",
]

