[project]
name = "ai200-workshop-api"
version = "0.1.0"
description = "Azure AI-200 Workshop — FastAPI 백엔드 (RAG 파이프라인)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Azure authentication
    "azure-identity>=1.19.0",
    # azure.identity.aio (async credential) 는 async HTTP transport 로 aiohttp 를 요구한다.
    # 명시하지 않으면 컨테이너 이미지에서 ImportError: aiohttp package is not installed 로 부팅 실패.
    "aiohttp>=3.10.0",

    # Azure OpenAI
    "openai>=1.54.0",

    # Cosmos DB
    "azure-cosmos>=4.7.0",

    # Observability — Azure Monitor + OpenTelemetry 자동 계측 묶음
    "azure-monitor-opentelemetry>=1.6.0",
    # azure-monitor 가 자동 활성화하지 않는 async HTTP 클라이언트 계측 — Azure OpenAI(httpx),
    # Cosmos(aiohttp) 호출을 dependency span 으로 남기려면 명시적으로 추가해야 한다.
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-aiohttp-client",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# 기본 + import 정렬 + 단순 버그 패턴
select = ["E", "F", "I", "B", "UP"]
ignore = [
    # 일부 한국어 docstring 의 라인 길이는 학습 가독성을 위해 길게 유지
    "E501",
]
